update robot & sitemaps

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -99,7 +99,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A31zeg8GEj5kWwKf/FRhUE++OK3GhnuICR4eIoOg/x2pAFGKv0h/e0iVyipbhFpv2LC11eWlrMatmeMtCO0kv7sqeQFrDu4Sk4hz/wVxAyFhENagWwEc5y/n0j8VUiln">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iA81cR/jD81MLSYTj53WILnxl+QPGAWwXJrQZmfWrR7AXj+pL+1NlsjbVWwqh6NIl66LTcOhEmECd+LZJIuF6T+vicUv3MEnbtsXLCPawijs2SlLOFgzOD8BkP9bI4OT">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Your message has been received. Thanks!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -230,7 +230,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JQ2TPSX1pOtSih+2E+glKcbuigRS6DTkQnKMXjGZJCw4j1exB/gtef0NmlBP4eEBOe3rfbvAXLF7g3qnZv1Q6ntN/NLUIKjpbAikCkxkt4K1qsL7/jWyHQqm4VL3MJFF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L1eebvafPvyocAN6I/Bxq340tMIfUX4sJu2aNXd4kuXqvMEc9s89OQScc5uyT9Bu2iyg61Iw0mZ6TgwvCVreSx1+GDJLDbpXRBQoz0b01eIJOwp1Bdo9KAfIgs+nxxXH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email received. You are now subscribed for my updates. Thanks!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
