--- a/my/tnc.html
+++ b/my/tnc.html
@@ -103,7 +103,7 @@ Akta Komunikasi dan Multimedia 1998 (CMA), yang mengawal selia industri multimed
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
 
     
 
