--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section content4 cid-rIfe7QPdmC" id="content4-4">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content4 cid-rIfe7QPdmC" id="content4-4">
 
     
 
