--- a/my/index.html
+++ b/my/index.html
@@ -74,7 +74,7 @@
                     <a class="nav-link link text-black display-4" href="work.html">
                         Kerja Saya</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="contact.html">
-                        Hubungi Saya</a></li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">
+                        Hubungi Saya</a></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">
                         Bahasa</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="index.html">Malay<br></a><a class="text-black dropdown-item display-4" href="https://iambirdlee.gq/">English<br></a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="tnc.html">
                         T &amp; C</a></li></ul>
             
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="cid-rJNstEt6kU" id="image2-2u">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-rJNstEt6kU" id="image2-2u">
 
     
 
