--- a/tnc.html
+++ b/tnc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  >
 <head>
   <!-- Site made with Mobirise Website Builder v4.11.6, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -101,7 +101,7 @@ Communications and Multimedia Act 1998 (CMA), which regulates the multimedia and
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
 
     
 
