--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  >
 <head>
   <!-- Site made with Mobirise Website Builder v4.11.6, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content4 cid-rIfe7QPdmC" id="content4-4">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="mbr-section content4 cid-rIfe7QPdmC" id="content4-4">
 
     
 
