--- a/my/contact.html
+++ b/my/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ms">
+<html  >
 <head>
   <!-- Site made with Mobirise Website Builder v4.11.6, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -99,7 +99,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4RK49LQ9p77s5aFEL9lRkNtxeLqh2QYEAgWIjudYU/KmIo2Pl5yjo/Uh+zI7a9nyN+dWEUxtpPUlzaibPZsJw8YyezqA0UqNy3Ufytl8Ba6qeSyI6YmLRWRHAxVMw6Zp">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YAeaIURL4L7gcXDJqyv2ng4MVuVBBtFYe0Z7mHf7O3wJKzCy47zaZ3qPYg6ElEkfH9uy/9vIYlxmIilMOmilbJiknMMUJHMTwPASXTItq1kKHPyZzrj6tYG4Lc5lDBJj">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ucapan anda telah diterima. Terima Kasih!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -107,10 +107,10 @@
                             </div>
                             <div class="dragArea row">
                                 <div class="col-md-12 form-group " data-for="name">
-                                    <input type="text" name="name" placeholder="Nama" data-form-field="Name" required class="form-control px-3 display-7" id="name-header15-21">
+                                    <input type="text" name="name" placeholder="Nama" data-form-field="Name" required="required" class="form-control px-3 display-7" id="name-header15-21">
                                 </div>
                                 <div class="col-md-12 form-group " data-for="email">
-                                    <input type="email" name="email" placeholder="Email" data-form-field="Email" required class="form-control px-3 display-7" id="email-header15-21">
+                                    <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control px-3 display-7" id="email-header15-21">
                                 </div>
                                 <div data-for="phone" class="col-md-12 form-group ">
                                     <input type="tel" name="phone" placeholder="Whatsapp (Jika Perlu)" data-form-field="Phone" class="form-control px-3 display-7" id="phone-header15-21">
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="y2//UV1WoPO1pD4c0LEzIE6C7Aofxd0VOYThELN+iMaT1RfE/7Mjd+BLYXfws+UsxsomlvmQDIKlMuPd8FiB/01sGO1X2fbDI7f1Z+7FA1lVXu1bUjh91icRKGGIRzLA">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M4BzN4w1HaAH4OM4yhj5s/od7h0bi7etILqu98AwgH9vhgUwFAS5tlOrVnolfxJrSBnUjl3rwIOui5qBLrV4kciGdUsnjagyuvIsCMmIK6Xt2NLTvEh5CaMvyr+Jp3vr">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email anda diterima. Anda akan menerima kemas kini terbaru dari saya. Terima Kasih!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -235,7 +235,7 @@
                     </div>
                     <div class="dragArea row">
                         <div class="form-group col" data-for="email">
-                            <input type="email" name="email" placeholder="Baik! Email saya adalah..." data-form-field="Email" required class="form-control display-7" id="email-form3-22">
+                            <input type="email" name="email" placeholder="Baik! Email saya adalah..." data-form-field="Email" required="required" class="form-control display-7" id="email-form3-22">
                         </div>
                         <div class="col-auto input-group-btn"><button type="submit" class="btn  btn-success display-4">LANGGAN</button></div>
                     </div>
