--- a/my/tnc.html
+++ b/my/tnc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ms">
+<html  >
 <head>
   <!-- Site made with Mobirise Website Builder v4.11.6, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -103,7 +103,7 @@ Akta Komunikasi dan Multimedia 1998 (CMA), yang mengawal selia industri multimed
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content4 cid-rJN3Yl4rXw" id="content4-25">
 
     
 
