--- a/my/about.html
+++ b/my/about.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="mbr-section content4 cid-rIfe7QPdmC" id="content4-4">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section content4 cid-rIfe7QPdmC" id="content4-4">
 
     
 
