--- a/my/contact.html
+++ b/my/contact.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -99,7 +99,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YAeaIURL4L7gcXDJqyv2ng4MVuVBBtFYe0Z7mHf7O3wJKzCy47zaZ3qPYg6ElEkfH9uy/9vIYlxmIilMOmilbJiknMMUJHMTwPASXTItq1kKHPyZzrj6tYG4Lc5lDBJj">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zaipVXkYyJ1GlDc0w+ikmzVgX1JJ0LDosk2LrhvXcHrSjB3qNf9lYJdpfpla+WQglynDDLtetCKuCdrB/EYVTxByj7XeQ2vTrNFAlEocHbyThgNnDCtNrZyfyuxliQXO">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ucapan anda telah diterima. Terima Kasih!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M4BzN4w1HaAH4OM4yhj5s/od7h0bi7etILqu98AwgH9vhgUwFAS5tlOrVnolfxJrSBnUjl3rwIOui5qBLrV4kciGdUsnjagyuvIsCMmIK6Xt2NLTvEh5CaMvyr+Jp3vr">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="S/u3QnenPDK30GOiJIUjksOfCNB5/kdaAtJl+ApURr3NSLhzEB9zBJVy00PXGoYyE/PsMyceg/MNxvgOsRXRWX5qtcFoMiY8Hky2rnojsDSSQT0sfM1XRMU8f0gMdWf3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email anda diterima. Anda akan menerima kemas kini terbaru dari saya. Terima Kasih!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
