portfolio delete 2nd tq page

--- a/portfolio/DesignPortfolio.html
+++ b/portfolio/DesignPortfolio.html
@@ -5,7 +5,7 @@
 		<title>DesignPortfolio</title>
 		<link href="DesignPortfolio-web-resources/css/DesignPortfolio.css" rel="stylesheet" type="text/css" />
 	</head>
-	<body id="DesignPortfolio">
+	<body id="DesignPortfolio" oncontextmenu="return false;">
 		<div class="frame-2">
 			<img class="frame-1" src="DesignPortfolio-web-resources/image/Design%20Portfolio-01.jpg" alt="Design%20Portfolio-01.jpg" />
 		</div>
@@ -38,9 +38,6 @@
 		</div>
 		<div class="frame-2">
 			<img class="frame-1" src="DesignPortfolio-web-resources/image/Design%20Portfolio-11.jpg" alt="Design%20Portfolio-11.jpg" />
-		</div>
-		<div class="frame-2">
-			<img class="frame-1" src="DesignPortfolio-web-resources/image/Design%20Portfolio-12.jpg" alt="Design%20Portfolio-12.jpg" />
 		</div>
 		<div class="frame-2">
 			<img class="frame-1" src="DesignPortfolio-web-resources/image/Design%20Portfolio-12.jpg" alt="Design%20Portfolio-12.jpg" />
