--- a/my/contact.html
+++ b/my/contact.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
+<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="header15 cid-rJMvUvZzTz" id="header15-21">
 
     
 
@@ -99,7 +99,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ip7SXPoUXcQnkL0uHOXBE+FFCVpGEjcXH13zt1CkBoYGFEubPrgtljh+FEesdt42aKF0GCjpAxTekpREW9SnkYnH7GkUVzRH5DA/JSVkDfzDmCigEIIDmENuT5utcqvE">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KuYuoLsE+c5qCWm807j6R6kodR81YI2gA9PVA3AkN8z2K8pTHRRPW+w/qeNESXy4vX+RprcvkXN15PCEhz4L80wb2J8Z5EfxLiSBK6w/m5hZcdK2xQqjLJAIdc2Qpeqp">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ucapan anda telah diterima. Terima Kasih!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HBPlORdPQf4vXU+cbQvB1D26N6798kID++DDT4s38CAYnUeYcN7H/3C9zZaJxgt9uIa8I1uZfY8ovwm7bcG5a3oZL9pNv5BgTY5jbb3+Qa/3UW1hU5lGLhj0GOL0MlWr">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QfElMIV2SD+3a96nieb6xSxCaEd1HUYIGYpFjExNFUg5QETZIjfn6lLGOtI32zdc2x+6IuJaPVzWH2/6AtgLN5/0Kvf7lh1Qa524Jgef2FExk39QkWzoKRQaHHOwdm0d">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Email anda diterima. Anda akan menerima kemas kini terbaru dari saya. Terima Kasih!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
