--- a/portfolio/DesignPortfolio.html
+++ b/portfolio/DesignPortfolio.html
@@ -5,7 +5,7 @@
 		<title>DesignPortfolio</title>
 		<link href="DesignPortfolio-web-resources/css/DesignPortfolio.css" rel="stylesheet" type="text/css" />
 	</head>
-	<body id="DesignPortfolio" oncontextmenu="return false;">
+	<body id="DesignPortfolio">
 		<div class="frame-2">
 			<img class="frame-1" src="DesignPortfolio-web-resources/image/Design%20Portfolio-01.jpg" alt="Design%20Portfolio-01.jpg" />
 		</div>
