disable right click in portfolio

--- a/portfolio/DesignPortfolio.html
+++ b/portfolio/DesignPortfolio.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="utf-8" />
 		<title>DesignPortfolio</title>
 		<link href="DesignPortfolio-web-resources/css/DesignPortfolio.css" rel="stylesheet" type="text/css" />
 	</head>
-	<body id="DesignPortfolio">
+	
+<body id="DesignPortfolio" oncontextmenu="return false;">
 		<div class="frame-2">
 			<img class="frame-1" src="DesignPortfolio-web-resources/image/Design%20Portfolio-01.jpg" alt="Design%20Portfolio-01.jpg" />
 		</div>
