update portfolio iframe size

--- a/my/work.html
+++ b/my/work.html
@@ -96,10 +96,10 @@
     </div>
 </section>
 
-<section class="mbr-section article content1 cid-rKX6C6PKcB" id="custom-html-36">
+<section class="mbr-section article content1 cid-rKX6C6PKcB" id="custom-html-36" align="middle">
 
      
- <iframe src="https://iambirdlee.gq/portfolio/DesignPortfolio.html" height="720px" width="100%">
+ <iframe src="https://iambirdlee.gq/portfolio/DesignPortfolio.html" height="720px" width="90%">
                                         </iframe>
 </section>
 
