--- a/work.html
+++ b/work.html
@@ -21,7 +21,8 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css"><style type="text/css">
+  </style>
   
   
   
@@ -97,10 +98,10 @@
     </div>
 </section>
 
-<section class="mbr-section article content1 cid-rKX0DQUWOf" id="custom-html-36">
+<section class="mbr-section article content1 cid-rKX0DQUWOf" id="custom-html-36" align="middle">
 
      
-  <iframe src="https://iambirdlee.gq/portfolio/DesignPortfolio.html" height="720px" width="100%">
+  <iframe src="https://iambirdlee.gq/portfolio/DesignPortfolio.html" width="90%" height="720px" scrolling="auto">
                                         </iframe>
  </section>
 
