work link corrected

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        <a href="contact.html">My Work</a></h4>
+                        <a href="work.html">My Work</a></h4>
                     
                 </div>
             </div>
